update openapi doc
