# openapis/swagger.yaml
@@ -1131,6 +1131,25 @@ paths:
       description: >-
         Get a new temporary access token for the current user by providing a
         valid API key.
+      parameters:
+        - name: expires_in
+          required: false
+          in: query
+          description: >-
+            Optional integer specifying the access token lifetime (in seconds). Cannot
+            be greater than the configured MAX_ACCESS_TOKEN_TTL, unless you are
+            requesting a task token, in which case this cannot be greater than the configured
+            MAX_TASK_TOKEN_TTL. If omitted, defaults to MAX_ACCESS_TOKEN_TTL.
+          schema:
+            type: integer
+        - name: task_token
+          required: false
+          in: query
+          description: >-
+            Optionally request a specific task token type. If omitted, defaults to
+            generating a regular access token.
+          schema:
+            type: string
       security:
         - OAuth2:
             - user
@@ -1214,6 +1233,25 @@ paths:
       description: >-
         Get a new temporary access token for the current user by providing a
         valid API key.
+      parameters:
+        - name: expires_in
+          required: false
+          in: query
+          description: >-
+            Optional integer specifying the access token lifetime (in seconds). Cannot
+            be greater than the configured MAX_ACCESS_TOKEN_TTL, unless you are
+            requesting a task token, in which case this cannot be greater than the configured
+            MAX_TASK_TOKEN_TTL. If omitted, defaults to MAX_ACCESS_TOKEN_TTL.
+          schema:
+            type: integer
+        - name: task_token
+          required: false
+          in: query
+          description: >-
+            Optionally request a specific task token type. If omitted, defaults to
+            generating a regular access token.
+          schema:
+            type: string
       security:
         - OAuth2:
             - user
